--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "countdownchamp",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://bayleypap.github.io/CountdownApp/",
+  "homepage": "https://bayleypap.github.io/CountdownApp",
   "dependencies": {
     "gh-pages": "^1.0.0",
     "react": "^16.1.0",
